CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(exception_handling)
FILE(GLOB SRC src/Exception.cpp)

INCLUDE_DIRECTORIES(inc)

ADD_LIBRARY(${PROJECT_NAME}_object OBJECT ${SRC})

SET(${PROJECT_NAME}_INCLUDE_DIRS ${${PROJECT_NAME}_SOURCE_DIR}/inc CACHE PATH "Path to ${PROJECT_NAME}'s include directory")
